# steganography-cripto

./: .gitignore  CMakeLists.txt  README.md  embed.c  encryption.c  extract.c  main.c
fotosPrueba/: README.txt
include/: byteswap.h  embed.h  encryption.h  extract.h  main.h
